# NTRT_MachineLearning

./: README.md
env/include/: gmock  gtest
resources/src/craterEscape/logs/: scores.csv
scripts/learning/src/: AppTerrainJSONGASpec.json  AppTerrainJSONHCSpec.json  AppTerrainJSONSpec.json  NTRTJobMaster.py  evoLog.txt  evolution_job_master.py
scripts/learning/src/evolution/: evolution_job.py
src/: xyz
src/.metadata/.plugins/org.eclipse.epp.usagedata.recording/: usagedata.csv
src/dev/: CMakeLists.txt
src/dev/cpeterson/: CMakeLists.txt
src/dev/cpeterson/SuperBall/: AppSUPERball.cpp  T6Controller.h  T6Model.cpp  T6Model.h
src/dev/cpeterson/Tandem/: AppTANDEMball.cpp  TandemController.cpp  TandemController.h  TandemModel6.cpp
src/dev/cpeterson/TandemD2L/: AppTANDEMball.cpp  TandemController.cpp  TandemController.h  TandemModel6.cpp  TandemModel6.h
src/dev/kschro1/: CMakeCache.txt  CMakeLists.txt
src/dev/kschro1/CurvedSuperBallPayload/: AppCurvedSuperBallPayload.cpp  CurvedSuperBallPayload.cpp  CurvedSuperBallPayload.h  CurvedSuperBallPayloadController.cpp  CurvedSuperBallPayloadController.h  text.txt
src/dev/kschro1/SUPERball_VTech/: T6Model.cpp  T6Model.h
src/dev/kschro1/SensoredSuperBallPayload/: AppSensoredSuperBallPayload.cpp  SensoredSuperBallPayload.cpp  SensoredSuperBallPayload.h  SensoredSuperBallPayloadController.cpp  SensoredSuperBallPayloadController.h
src/dev/steve/: CMakeLists.txt
src/dev/tandem/: AppTANDEMball.cpp  CMakeLists.txt  T6Controller.cpp  TandemModel6.cpp
src/examples/SUPERball/: AppSUPERball.cpp  CMakeLists.txt
(+10 files in other folders)
